[gd_scene load_steps=3 format=3 uid="uid://n34kine1d6ij"]

[ext_resource type="Script" path="res://instances/pnl_beans.gd" id="1_yfkr1"]
[ext_resource type="PackedScene" uid="uid://0ki7ffdtdy1k" path="res://instances/param_inspector.tscn" id="2_bunmk"]

[node name="pnl_beans" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -737.0
offset_bottom = -417.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yfkr1")
metadata/_tab_index = 3

[node name="scroll" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="vertical box" type="VBoxContainer" parent="scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="horizontal box" type="HBoxContainer" parent="scroll/vertical box"]
layout_mode = 2

[node name="btn_test_beans" type="Button" parent="scroll/vertical box/horizontal box"]
layout_mode = 2
size_flags_horizontal = 3
text = "Test the beans!"

[node name="btn_save_beans" type="Button" parent="scroll/vertical box/horizontal box"]
layout_mode = 2
size_flags_horizontal = 3
text = "SAVE THE BEANS"

[node name="btn_load_beans" type="Button" parent="scroll/vertical box/horizontal box"]
layout_mode = 2
size_flags_horizontal = 3
text = "Load the beans."

[node name="sub_res" type="PanelContainer" parent="scroll/vertical box"]
unique_name_in_owner = true
layout_mode = 2

[node name="param_inspector" parent="scroll/vertical box/sub_res" instance=ExtResource("2_bunmk")]
layout_mode = 2

[connection signal="pressed" from="scroll/vertical box/horizontal box/btn_test_beans" to="." method="_on_btn_test_beans_pressed"]
[connection signal="pressed" from="scroll/vertical box/horizontal box/btn_save_beans" to="." method="_on_btn_save_beans_pressed"]
[connection signal="pressed" from="scroll/vertical box/horizontal box/btn_load_beans" to="." method="_on_btn_load_beans_pressed"]
