extends PanelContainer


func _on_btn_test_beans_pressed():
	push_error("We need more beans, bro.")
	pass # Replace with function body.


func _on_btn_save_beans_pressed():
	push_error("Lets save some of these bean babies for later.")
	pass # Replace with function body.


func _on_btn_load_beans_pressed():
	push_error("Sweet! Home-cooked beans I didn't have to cook myself.")
	pass # Replace with function body.
s
